# PricingEngine

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  Makefile  README.md  conftest.py  curve_nodes.py  irs.py  mypy.ini  pyproject.toml  src
.github/workflows/: auto-enable-automerge.yml  auto-pr-on-push.yml  autofix-pr.yml  ci.yml  ci_main.yml
pricingengine/: __init__.py  currencies.py  irs.py
pricingengine/cashflows/: __init__.py  swap_leg.py
pricingengine/examples/: price_irs.py
pricingengine/indices/: __init__.py  index_utils.py
pricingengine/instruments/: __init__.py  _instrument.py  equity_option.py  fx_forward.py  interest_rate_swap.py  swaption.py
pricingengine/structures/: curve_nodes.py
pricingengine/termstructures/: __init__.py  curve_nodes.py
src/pricingengine/: __init__.py  irs.py
src/pricingengine/cashflows/: __init__.py  swap_leg.py
src/pricingengine/indices/: index_utils.py
src/pricingengine/instruments/: __init__.py  _instrument.py
src/pricingengine/termstructures/: __init__.py  curve_nodes.py
tests/: test_api_surface.py  test_curve_nodes.py  test_irs_smoke.py  test_swaption_smoke.py
