[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "pricingengine"
version = "0.1.0"
description = "QuantLib-based derivatives pricing engine"
readme = "README.md"
authors = [{name = "QuantLib PricingEngine"}]
license = {text = "MIT"}
requires-python = ">=3.11"
dependencies = [
    "QuantLib>=1.29",
    "pandas>=2.0",
]

[project.urls]
Homepage = "https://example.com/pricingengine"
